# bench-2024

./: .gitignore  Bench2024.sln  CMakeLists.txt  LICENSE  README.md  RunBenchmark.Unix.sh  RunBenchmark.Win32NT.sh  RunMerge.py  csharp.Unix.Release.bench.FibonacciArray.1728929046.csv  csharp.Unix.Release.bench.FibonacciArray.csv  csharp.Unix.Release.bench.FibonacciRecursive.1728929046.csv  csharp.Unix.Release.bench.FibonacciRecursive.csv  csharp.Unix.Release.bench.FourierTransform.1728929046.csv  csharp.Unix.Release.bench.PowCosine.1728929046.csv  csharp.Unix.Release.bench.PowCosine.csv  csharp.Unix.Release.bench.QuakeInverseSqrt.1728929046.csv  csharp.Unix.Release.bench.QuakeInverseSqrt.csv  csharp.Unix.Release.bench.SquareRoot.1728929046.csv  csharp.Unix.Release.bench.SquareRoot.csv  csharp.Unix.Release.main.1728929046.csv  csharp.Win32NT.Release.bench.FibonacciArray.1728919554.csv  csharp.Win32NT.Release.bench.FibonacciArray.1728923963.csv  csharp.Win32NT.Release.bench.FibonacciRecursive.1728919554.csv  csharp.Win32NT.Release.bench.FibonacciRecursive.1728923963.csv  csharp.Win32NT.Release.bench.FourierTransform.1728919554.csv  csharp.Win32NT.Release.bench.FourierTransform.1728923963.csv  csharp.Win32NT.Release.bench.PowCosine.1728919554.csv  csharp.Win32NT.Release.bench.PowCosine.1728923963.csv  csharp.Win32NT.Release.bench.QuakeInverseSqrt.1728919554.csv  csharp.Win32NT.Release.bench.QuakeInverseSqrt.1728923963.csv  csharp.Win32NT.Release.bench.QuakeInverseSqrt.csv  csharp.Win32NT.Release.bench.SquareRoot.1728919554.csv  csharp.Win32NT.Release.bench.SquareRoot.csv  (+34 more)
(+39 files in other folders)
